Fix min-height too large in mobile browsers (#35)

--- a/assets/css/base.tpl.css
+++ b/assets/css/base.tpl.css
@@ -4,6 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  min-height: 100svh;
   margin: 0;
   padding: 0;
 }
